# fonduels

./: .gitignore  DuelLib.js  README.md  index.html  index.js
client/src/: README.md  index.html  index.js  package.json
client/src/css/: duels.css
client/src/enigma/: enigmaInit.js  worker.js
contracts/: BasicTournament.sol  Copy.sol  WizardGuild.sol
migrations/: 2_deploy_contracts.js
secret_contracts/duel/: Cargo.toml
secret_contracts/duel/src/: lib.rs
secret_contracts/simple_addition/: Sample.json
secret_contracts/simple_addition/src/: lib.rs
smart_contracts/: Sample.sol
test/: duel.txt
